[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/character_info/character_info.gd" type="Script" id=1]
[ext_resource path="res://font/Noto_Serif_TC/NotoSerifTC-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://character/enemy/yusha/sprites/attack/0.png" type="Texture" id=3]
[ext_resource path="res://ui/character_info/status_label.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="CharacterInfo" type="GridContainer"]
margin_top = 514.0
margin_right = 460.0
margin_bottom = 1020.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 408.0
margin_bottom = 251.0
size_flags_vertical = 3

[node name="PreviewBG" type="TextureRect" parent="HBoxContainer"]
margin_right = 180.0
margin_bottom = 251.0
rect_min_size = Vector2( 180, 180 )

[node name="PreviewSprite" type="TextureRect" parent="HBoxContainer/PreviewBG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusList" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 184.0
margin_right = 408.0
margin_bottom = 251.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/StatusList"]
margin_right = 224.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/StatusList"]
margin_top = 64.0
margin_right = 224.0
margin_bottom = 186.0
columns = 2

[node name="Status" parent="HBoxContainer/StatusList/GridContainer" instance=ExtResource( 4 )]
margin_right = 110.0

[node name="Status2" parent="HBoxContainer/StatusList/GridContainer" instance=ExtResource( 4 )]
margin_left = 114.0
margin_right = 224.0

[node name="Status3" parent="HBoxContainer/StatusList/GridContainer" instance=ExtResource( 4 )]
margin_top = 42.0
margin_right = 110.0
margin_bottom = 80.0

[node name="Status4" parent="HBoxContainer/StatusList/GridContainer" instance=ExtResource( 4 )]
margin_left = 114.0
margin_top = 42.0
margin_right = 224.0
margin_bottom = 80.0

[node name="Status5" parent="HBoxContainer/StatusList/GridContainer" instance=ExtResource( 4 )]
margin_top = 84.0
margin_right = 110.0
margin_bottom = 122.0

[node name="Status6" parent="HBoxContainer/StatusList/GridContainer" instance=ExtResource( 4 )]
margin_left = 114.0
margin_top = 84.0
margin_right = 224.0
margin_bottom = 122.0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/StatusList"]
margin_top = 190.0
margin_right = 224.0
margin_bottom = 251.0
size_flags_vertical = 3

[node name="Description" type="Label" parent="."]
margin_top = 255.0
margin_right = 408.0
margin_bottom = 506.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "能力均衡，能施展劍氣攻擊複數敵人。"
